# txiki.js

./: CMakeLists.txt  Makefile
.github/workflows/: ci.yml
docs/: txikijs.d.ts
src/: bootstrap-compile.c  bootstrap.c  modules.c  private.h  streams.c  sys.c  vm.c
src/js/: bundle.be.qjs  bundle.js  bundle.le.qjs  std.be.qjs  std.le.qjs
src/js/tjs/: ffi.js
